Always open the block transforms panel and avoid leaking the text-align

--- a/editor/components/block-switcher/style.scss
+++ b/editor/components/block-switcher/style.scss
@@ -51,6 +51,8 @@
 		border: 1px solid $light-gray-500;
 		overflow: hidden;
 		padding: 5px;
+		text-align: initial;
+
 		> * {
 			transform: scale( 0.7 );
 			transform-origin: center top;
